--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,8 +35,16 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.6.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    //firebase
     implementation 'com.google.firebase:firebase-auth:21.0.3'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
+    implementation 'com.google.firebase:firebase-database'
+    implementation platform('com.google.firebase:firebase-bom:30.1.0')
+    implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.google.android.gms:play-services-auth:20.2.0'
+
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
@@ -47,4 +55,12 @@ dependencies {
 
     //power spinner
     implementation "com.github.skydoves:powerspinner:1.1.7"
+
+    //loading screens spinkit
+    //implementation 'com.github.ybq:Android-SpinKit:1.4.0'
+
+    //facebook login
+    implementation 'com.facebook.android:facebook-android-sdk:latest.release'
+
+
 }
